syntax = "proto3";
package rental.v1;
option go_package="coolcar/rental/api/gen/v1;rentalpb";

message Location {
  double latitude = 1;
  double longitude = 2;
}

message LocationStatus {
  Location location = 1;
  int32 fee_cent = 2;
  double km_driven = 3;
}

enum TripStatus {
  TS_NOT_SPECIFIED = 1;
  IN_PROGRESS = 2;
  FINISHED = 3;
}

message TripEntity {
  string id = 1;
  Trip trip = 2;
}

message Trip {
  string account_id = 1;
  string car_id = 2;
  LocationStatus start = 3;
  LocationStatus current = 4;
  LocationStatus end = 5;
  TripStatus status = 6;
}

message CreateTripRequest {
  string start = 1;
}

message CreateTripResponse {

}
service TripService {
  rpc CreateTrip(CreateTripRequest) returns (CreateTripResponse);
}